improved index.html

--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,16 @@
         </div>
       </div>
     </div>
-
+    <label>Positive Line
+      <button class="collapsible">&darr;</button>
+    </label> 
+    </select>
+    <label>Negative Line
+      <button class="collapsible">&darr;</button>
+      </label> 
+      </select>
+      <br>
+     
   </main>
 
   <script src="https://unpkg.com/markdown-it@8.4.2/dist/markdown-it.min.js"></script>
